# eye

./: .gitattributes  CLAUDE.md  Cargo.toml  README.md  eye.toml
.claude/: settings.local.json
.claude/plans/: imperative-honking-pond.md
.githook/: README.md  commit-msg  install.ps1  install.sh  post-checkout  pre-commit  pre-push  test-windows.ps1
.github/: dependabot.yml
.github/workflows/: build-monitor.yml  ci.yml  dependabot.yml  release.yml
.trae/rules/: main.md
design/: provider.md  tool.md
design/tools/: search.md  time.md  web_fetch.md
docs/provider/: compatible.yaml  deepseek.md  openai.trimmed.yaml  openai.yaml  openrouter.trimmed.yaml  openrouter.yaml
examples/: base_interface_demo.rs  console_tests.rs  extract_schemas.rs  json.rs  openai.rs  reqwest.rs  sqlite.rs  strip_examples.rs  test_multimodal.rs  test_provider.rs  yaml_trimmer.rs
scripts/: build-monitor.ps1  setup-build-monitor.ps1
src/: lib.rs  main.rs  utils.rs
src/agent/: mod.rs
src/config/: cli.rs  mod.rs  settings.rs
src/interface/: base.rs  cli.rs  console.rs  mod.rs  trait.rs
src/memory/: conversation.rs  history.rs  mod.rs
src/model/: mod.rs  openrouter.rs  trait.rs
src/provider/: compatible.rs  deepseek.rs  mod.rs  openai.rs  openrouter.rs  openrouter_new.rs  trait.rs  types.rs  types_new.rs
src/provider/compatible/: convert.rs  mod.rs  types.rs
src/provider/deepseek/: convert.rs  mod.rs  types.rs
src/provider/openai/: convert.rs  mod.rs  types.rs
src/provider/openrouter/: client.rs  convert.rs  embedding_types.rs  mod.rs
src/provider/openrouter/chat_types/: messages.rs  mod.rs  response.rs  tools.rs
src/provider/types/: capabilities.rs  chat.rs  embedding.rs  helpers.rs  mod.rs
src/skill/: mod.rs  trait.rs
src/tool/: README.md  file_read.rs  file_search.rs  file_write.rs  mod.rs  search.rs  shell.rs  time.rs  trait.rs  web_fetch.rs
tests/: compatible_test.rs  deepseek_tests.rs  integration_test.rs  openai_test.rs  openrouter_test.rs  provider_factory_test.rs  provider_integration_test.rs  provider_test.rs
