[package]
version = "0.1.0"
name = "eye"
authors = ["hoping <baihaoping@gmail.com>"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "eye_bin"
path = "src/main.rs"

[dependencies]
derive_more = { version = "2.1", features = ["display", "error", "deref", "from"] }
anyhow = "1.0"
tracing = { version = "0.1", features = ["log"] }
tracing-appender = "0.2"

# CLI and configuration
clap = { version = "4.5", features = ["derive", "env"] }
toml = "1.0"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
html2text = "0.1.13"

# Async trait support
async-trait = "0.1"

# Bitflags for model capabilities
bitflags = "2.5"

console = "0.16"
dialoguer = "0.12"
chrono = "0.4"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono"] }
yaml-rust2 = "0.11.0"
serde_yaml = "0.9.34"

[target.'cfg(not(target_os = "android"))'.dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "chrono"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"
